RESOLVED FIXED304152
[iOS] Safari sometimes crashes under -[UIPreviewTarget initWithContainer:center:transform:]
https://bugs.webkit.org/show_bug.cgi?id=304152
Summary [iOS] Safari sometimes crashes under -[UIPreviewTarget initWithContainer:cent...
Wenson Hsieh
Reported 2025-12-14 15:24:03 PST
Attachments
Wenson Hsieh
Comment 1 2025-12-14 15:41:06 PST
EWS
Comment 2 2025-12-15 08:47:07 PST
Committed 304459@main (6269463a4c4f): <https://commits.webkit.org/304459@main> Reviewed commits have been landed. Closing PR #55381 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.