Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -1507,6 +1507,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     _isBlurringFocusedElement = NO;
 #if USE(UICONTEXTMENU)
     _isDisplayingContextMenuWithAnimation = NO;
+    _isPreparingToDisplayContextMenu = NO;
 #endif
     _isUpdatingAccessoryView = NO;
 
@@ -10319,6 +10320,8 @@ static WebCore::DataOwnerType coreDataOwnerType(_UIDataOwner platformType)
 {
     if (!_contextMenuHintContainerView) {
         _contextMenuHintContainerView = [self _createPreviewContainerWithLayerName:@"Context Menu Hint Preview Container"];
+        RELEASE_LOG(ViewState, "%p - [pageProxyID=%" PRIu64 "] Created container for context menu hint previews: %p"
+            , self, _page ? _page->identifier().toUInt64() : 0, _contextMenuHintContainerView.get());
 
         RetainPtr<UIView> containerView;
 
@@ -10342,6 +10345,8 @@ static WebCore::DataOwnerType coreDataOwnerType(_UIDataOwner platformType)
     if (!_contextMenuHintContainerView)
         return;
 
+    RELEASE_LOG(ViewState, "%p - [pageProxyID=%" PRIu64 "] Removing container for context menu hint previews: %p"
+        , self, _page ? _page->identifier().toUInt64() : 0, _contextMenuHintContainerView.get());
     [std::exchange(_contextMenuHintContainerView, nil) removeFromSuperview];
 
     _scrollViewForTargetedPreview = nil;
@@ -11828,6 +11833,10 @@ static RetainPtr<UITargetedPreview> createFallbackTargetedPreview(UIView *rootVi
 #endif
     if (_isDisplayingContextMenuWithAnimation)
         return;
+
+    if (_isPreparingToDisplayContextMenu)
+        return;
+
 #if ENABLE(DATA_DETECTION)
     // We are also using this container for the action sheet assistant...
     if ([_actionSheetAssistant hasContextMenuInteraction])
@@ -15306,6 +15315,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 {
     [self _startSuppressingSelectionAssistantForReason:WebKit::InteractionIsHappening];
     [self _cancelTouchEventGestureRecognizer];
+    _isPreparingToDisplayContextMenu = YES;
     return [self _createTargetedContextMenuHintPreviewIfPossible];
 }
 
@@ -15315,6 +15325,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
         return;
 
     _page->willBeginContextMenuInteraction();
+    _isPreparingToDisplayContextMenu = NO;
     _isDisplayingContextMenuWithAnimation = YES;
     [animator addCompletion:[weakSelf = WeakObjCPtr<WKContentView>(self)] {
         if (auto strongSelf = weakSelf.get()) {
